[package]
name = "hcr_week4"
version = "0.1.0"
edition = "2024"
build = "build.rs"
hotaru_mqtt = "0.8.2"

[dependencies]
# hotaru with HTTPS support for talking to the temperature sensor simulator
hotaru = { version = "0.8.2", features = ["https"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hotaru_mqtt = "0.8.2"